[package]
name = "lib76"
version = "0.1.0"
authors = ["Erik Sandberg <sandberg.erik@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
either = "1.8.1"
glam = "0.24"
lzo-sys = { path = "../lzo-sys" }
