[package]
name = "libsmacker-sys"
version = "0.1.1"
authors = ["r1sc"]
edition = "2021"
license = "LGPL-2.1"
keywords = ["gamedev", "video", "smk", "smacker", "bink"]
description = "sys-crate for libsmacker. Provides an unsafe wrapper around libsmacker."
readme = "README.md"
documentation = "https://docs.rs/libsmacker-sys"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"