[package]
name = "libsmacker"
version = "0.1.0"
authors = ["r1sc"]
edition = "2021"
license = "LGPL-2.1"
keywords = ["gamedev", "video", "smk", "smacker", "bink"]
description = "Higher-level bindings for libsmacker"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsmacker-sys = { path = "../libsmacker-sys" }
enum_primitive = "0.1.1"
bitflags = "2.0"