[package]
name = "modelviewer"
version = "0.1.0"
edition = "2021"

[build]
incremental = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
render76 = {path = "../render76" }
nalgebra = "0.32"
lib76 = {path = "../lib76" }
glfw = "0.54"
egui_glow = "0.26.2"
egui = "0.26.2"