[package]
name = "open76"
version = "0.1.0"
authors = ["r1sc <sandberg.erik@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
rodio = "0.17"
glfw = "0.51.0"
lib76 = { path = "../lib76" }
libsmacker = { path = "../libsmacker" }
glam = "0.24"
glow = "0.12.1"
anyhow = "1.0.70"